Fixed some small layout bugs

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -304,8 +304,8 @@ align-items: center;
     display: block;
 }
 
-.top {
-    margin-top: 5%;
+.border {
+    margin-bottom: 1rem;
 }
 
 li {
@@ -339,7 +339,6 @@ li {
 }
 
 .project-img-box {
-    max-width: 30rem;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -363,7 +362,6 @@ li {
 }
 
 .project-text {
-    max-width: 30rem;
     background-color: #FFF;
     color: #3A3E3B;
 }
@@ -395,7 +393,6 @@ li {
     font-family: 'Raleway', sans-serif;
     font-weight: 500;
     letter-spacing: 0.15rem;
-    margin: 0vh 4vw;
     padding: 0.5vh;
     border-top: 1px #273C2C solid;
     border-bottom: 1px #273C2C solid;
