--- a/app/css/media-queries/timeline-onesided.css
+++ b/app/css/media-queries/timeline-onesided.css
@@ -1,6 +1,6 @@
 
 
-@media screen and (max-width: 1101px) {
+@media screen and (max-width: 1100px) {
     .timeline-container {
         padding-left: 2.6%;
     }
